# ProjectPart3

./: .env  docker-compose.yml
.github/workflows/: ci-cd.yml
backend/: Dockerfile  package-lock.json  package.json
backend/src/: index.js
db/: init.sql
frontend/: Dockerfile
frontend/src/: App.js  api.js
frontend/src/components/: BitcoinDominance.js  BitcoinPrice.js  BlockHeight.js  TransactionCount.js
ingestion/: Cargo.toml  Dockerfile
ingestion/src/: main.rs
